src/objects/ACCL__Data_Type__c.object
<CustomObject>
    <description>Holds the flexible data type</description>
    <fields>
        <fullName>ACCL__Append_Empty_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Append Empty Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Customizable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If Unchecked, data type will be only used on Mobility</description>
        <label>Customizable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Data_Length_Decimal_Places__c</fullName>
        <label>Data Length Decimal Places</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Data_Length__c</fullName>
        <label>Data Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Data_Type__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Toggle</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Long_Name__c</fullName>
        <label>Long Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Manual__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <label>Data Type</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Long_Name__c</columns>
        <columns>ACCL__Data_Type__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>DomMDLZSalesPlanning</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Data Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Types</pluralLabel>
    <recordTypes>
        <fullName>ACCL__Date</fullName>
        <active>true</active>
        <label>Date</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Decimal</fullName>
        <active>true</active>
        <label>Decimal</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__LongText</fullName>
        <active>true</active>
        <label>String</label>
    </recordTypes>
    <recordTypes>
        <fullName>ACCL__Toggle</fullName>
        <active>true</active>
        <label>Toggle</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__Check_If_Sales_Org_Is_Changed</fullName>
        <active>true</active>
        <description>The Sales Org field cannot be edited after creation.</description>
        <errorConditionFormula>ISCHANGED(ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>The Sales Org can&apos;t be edited after Data Type creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Manual_Flag_Is_Not_Changeable</fullName>
        <active>true</active>
        <description>The checkbox &quot;Manual__c&quot; cannot be edited.</description>
        <errorConditionFormula>ISCHANGED(ACCL__Manual__c)</errorConditionFormula>
        <errorDisplayField>ACCL__Manual__c</errorDisplayField>
        <errorMessage>The Manual can&apos;t be edited after Data Type creation.</errorMessage>
    </validationRules>
</CustomObject>